# Minerva

./: Cargo.toml  Minerva_Project_Details.md  README.md
apps/minerva-cli/: Cargo.toml
apps/minerva-cli/src/: main.rs  ui.rs
captures/: sample_tiles.json
configs/: dev.toml
crates/minerva-controller/: Cargo.toml
crates/minerva-controller/src/: adb.rs  lib.rs
crates/minerva-engine/: Cargo.toml
crates/minerva-engine/src/: lib.rs
crates/minerva-network/: Cargo.toml
crates/minerva-network/src/: lib.rs
crates/minerva-ops/: Cargo.toml
crates/minerva-ops/src/: lib.rs
crates/minerva-orchestrator/: Cargo.toml
crates/minerva-orchestrator/src/: lib.rs
crates/minerva-types/: Cargo.toml
crates/minerva-types/src/: board.rs  config.rs  errors.rs  events.rs  game.rs  lib.rs  telemetry.rs  time_control.rs  ui.rs  vision.rs
crates/minerva-vision/: Cargo.toml
crates/minerva-vision/src/: lib.rs
docs/: adb_coordinates.md  architecture.md  cli_usage.md  vision_pipeline.md
