[package]
name = "minerva-orchestrator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
minerva-controller = { path = "../minerva-controller" }
minerva-engine = { path = "../minerva-engine" }
minerva-network = { path = "../minerva-network" }
minerva-ops = { path = "../minerva-ops" }
minerva-types = { path = "../minerva-types" }
minerva-vision = { path = "../minerva-vision" }
